@@ -139,7 +139,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00000b3e , 0x00000b44 , EF_COMBINING } ,
 	{ 0x00000b47 , 0x00000b48 , EF_COMBINING } ,
 	{ 0x00000b4b , 0x00000b4d , EF_COMBINING } ,
-	{ 0x00000b56 , 0x00000b57 , EF_COMBINING } ,
+	{ 0x00000b55 , 0x00000b57 , EF_COMBINING } ,
 	{ 0x00000b62 , 0x00000b63 , EF_COMBINING } ,
 	{ 0x00000b82 , 0x00000b82 , EF_COMBINING } ,
 	{ 0x00000bbe , 0x00000bc2 , EF_COMBINING } ,
@@ -166,7 +166,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00000d4a , 0x00000d4d , EF_COMBINING } ,
 	{ 0x00000d57 , 0x00000d57 , EF_COMBINING } ,
 	{ 0x00000d62 , 0x00000d63 , EF_COMBINING } ,
-	{ 0x00000d82 , 0x00000d83 , EF_COMBINING } ,
+	{ 0x00000d81 , 0x00000d83 , EF_COMBINING } ,
 	{ 0x00000dca , 0x00000dca , EF_COMBINING } ,
 	{ 0x00000dcf , 0x00000dd4 , EF_COMBINING } ,
 	{ 0x00000dd6 , 0x00000dd6 , EF_COMBINING } ,
@@ -215,7 +215,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00001a55 , 0x00001a5e , EF_COMBINING } ,
 	{ 0x00001a60 , 0x00001a7c , EF_COMBINING } ,
 	{ 0x00001a7f , 0x00001a7f , EF_COMBINING } ,
-	{ 0x00001ab0 , 0x00001abe , EF_COMBINING } ,
+	{ 0x00001ab0 , 0x00001ac0 , EF_COMBINING } ,
 	{ 0x00001b00 , 0x00001b04 , EF_COMBINING } ,
 	{ 0x00001b34 , 0x00001b44 , EF_COMBINING } ,
 	{ 0x00001b6b , 0x00001b73 , EF_COMBINING } ,
@@ -385,8 +385,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x0000309b , 0x000030ff , EF_FULLWIDTH } ,
 	{ 0x00003105 , 0x0000312f , EF_FULLWIDTH } ,
 	{ 0x00003131 , 0x0000318e , EF_FULLWIDTH } ,
-	{ 0x00003190 , 0x000031ba , EF_FULLWIDTH } ,
-	{ 0x000031c0 , 0x000031e3 , EF_FULLWIDTH } ,
+	{ 0x00003190 , 0x000031e3 , EF_FULLWIDTH } ,
 	{ 0x000031f0 , 0x0000321e , EF_FULLWIDTH } ,
 	{ 0x00003220 , 0x00003247 , EF_FULLWIDTH } ,
 	{ 0x00003248 , 0x0000324f , EF_AWIDTH } ,
@@ -401,6 +400,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x0000a806 , 0x0000a806 , EF_COMBINING } ,
 	{ 0x0000a80b , 0x0000a80b , EF_COMBINING } ,
 	{ 0x0000a823 , 0x0000a827 , EF_COMBINING } ,
+	{ 0x0000a82c , 0x0000a82c , EF_COMBINING } ,
 	{ 0x0000a880 , 0x0000a881 , EF_COMBINING } ,
 	{ 0x0000a8b4 , 0x0000a8c5 , EF_COMBINING } ,
 	{ 0x0000a8e0 , 0x0000a8f1 , EF_COMBINING } ,
@@ -447,6 +447,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00010a3f , 0x00010a3f , EF_COMBINING } ,
 	{ 0x00010ae5 , 0x00010ae6 , EF_COMBINING } ,
 	{ 0x00010d24 , 0x00010d27 , EF_COMBINING } ,
+	{ 0x00010eab , 0x00010eac , EF_COMBINING } ,
 	{ 0x00010f46 , 0x00010f50 , EF_COMBINING } ,
 	{ 0x00011000 , 0x00011002 , EF_COMBINING } ,
 	{ 0x00011038 , 0x00011046 , EF_COMBINING } ,
@@ -459,6 +460,7 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00011180 , 0x00011182 , EF_COMBINING } ,
 	{ 0x000111b3 , 0x000111c0 , EF_COMBINING } ,
 	{ 0x000111c9 , 0x000111cc , EF_COMBINING } ,
+	{ 0x000111ce , 0x000111cf , EF_COMBINING } ,
 	{ 0x0001122c , 0x00011237 , EF_COMBINING } ,
 	{ 0x0001123e , 0x0001123e , EF_COMBINING } ,
 	{ 0x000112df , 0x000112ea , EF_COMBINING } ,
@@ -481,6 +483,11 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x000116ab , 0x000116b7 , EF_COMBINING } ,
 	{ 0x0001171d , 0x0001172b , EF_COMBINING } ,
 	{ 0x0001182c , 0x0001183a , EF_COMBINING } ,
+	{ 0x00011930 , 0x00011935 , EF_COMBINING } ,
+	{ 0x00011937 , 0x00011938 , EF_COMBINING } ,
+	{ 0x0001193b , 0x0001193e , EF_COMBINING } ,
+	{ 0x00011940 , 0x00011940 , EF_COMBINING } ,
+	{ 0x00011942 , 0x00011943 , EF_COMBINING } ,
 	{ 0x000119d1 , 0x000119d7 , EF_COMBINING } ,
 	{ 0x000119da , 0x000119e0 , EF_COMBINING } ,
 	{ 0x000119e4 , 0x000119e4 , EF_COMBINING } ,
@@ -509,8 +516,11 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x00016f51 , 0x00016f87 , EF_COMBINING } ,
 	{ 0x00016f8f , 0x00016f92 , EF_COMBINING } ,
 	{ 0x00016fe0 , 0x00016fe3 , EF_FULLWIDTH } ,
+	{ 0x00016fe4 , 0x00016fe4 , EF_COMBINING | EF_FULLWIDTH } ,
+	{ 0x00016ff0 , 0x00016ff1 , EF_COMBINING | EF_FULLWIDTH } ,
 	{ 0x00017000 , 0x000187f7 , EF_FULLWIDTH } ,
-	{ 0x00018800 , 0x00018af2 , EF_FULLWIDTH } ,
+	{ 0x00018800 , 0x00018cd5 , EF_FULLWIDTH } ,
+	{ 0x00018d00 , 0x00018d08 , EF_FULLWIDTH } ,
 	{ 0x0001b000 , 0x0001b11e , EF_FULLWIDTH } ,
 	{ 0x0001b150 , 0x0001b152 , EF_FULLWIDTH } ,
 	{ 0x0001b164 , 0x0001b167 , EF_FULLWIDTH } ,
@@ -573,20 +583,22 @@ static ef_ucs_property_t  ucs_property_table[] =
 	{ 0x0001f680 , 0x0001f6c5 , EF_FULLWIDTH } ,
 	{ 0x0001f6cc , 0x0001f6cc , EF_FULLWIDTH } ,
 	{ 0x0001f6d0 , 0x0001f6d2 , EF_FULLWIDTH } ,
-	{ 0x0001f6d5 , 0x0001f6d5 , EF_FULLWIDTH } ,
+	{ 0x0001f6d5 , 0x0001f6d7 , EF_FULLWIDTH } ,
 	{ 0x0001f6eb , 0x0001f6ec , EF_FULLWIDTH } ,
-	{ 0x0001f6f4 , 0x0001f6fa , EF_FULLWIDTH } ,
+	{ 0x0001f6f4 , 0x0001f6fc , EF_FULLWIDTH } ,
 	{ 0x0001f7e0 , 0x0001f7eb , EF_FULLWIDTH } ,
-	{ 0x0001f90d , 0x0001f971 , EF_FULLWIDTH } ,
-	{ 0x0001f973 , 0x0001f976 , EF_FULLWIDTH } ,
-	{ 0x0001f97a , 0x0001f9a2 , EF_FULLWIDTH } ,
-	{ 0x0001f9a5 , 0x0001f9aa , EF_FULLWIDTH } ,
-	{ 0x0001f9ae , 0x0001f9ca , EF_FULLWIDTH } ,
+	{ 0x0001f90c , 0x0001f93a , EF_FULLWIDTH } ,
+	{ 0x0001f93c , 0x0001f945 , EF_FULLWIDTH } ,
+	{ 0x0001f947 , 0x0001f978 , EF_FULLWIDTH } ,
+	{ 0x0001f97a , 0x0001f9cb , EF_FULLWIDTH } ,
 	{ 0x0001f9cd , 0x0001f9ff , EF_FULLWIDTH } ,
-	{ 0x0001fa70 , 0x0001fa73 , EF_FULLWIDTH } ,
+	{ 0x0001fa70 , 0x0001fa74 , EF_FULLWIDTH } ,
 	{ 0x0001fa78 , 0x0001fa7a , EF_FULLWIDTH } ,
-	{ 0x0001fa80 , 0x0001fa82 , EF_FULLWIDTH } ,
-	{ 0x0001fa90 , 0x0001fa95 , EF_FULLWIDTH } ,
+	{ 0x0001fa80 , 0x0001fa86 , EF_FULLWIDTH } ,
+	{ 0x0001fa90 , 0x0001faa8 , EF_FULLWIDTH } ,
+	{ 0x0001fab0 , 0x0001fab6 , EF_FULLWIDTH } ,
+	{ 0x0001fac0 , 0x0001fac2 , EF_FULLWIDTH } ,
+	{ 0x0001fad0 , 0x0001fad6 , EF_FULLWIDTH } ,
 	{ 0x00020000 , 0x0002fffd , EF_FULLWIDTH } ,
 	{ 0x00030000 , 0x0003fffd , EF_FULLWIDTH } ,
 	{ 0x000e0100 , 0x000e01ef , EF_COMBINING | EF_AWIDTH } ,
